generator/preprocessed/raylib.h


typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector4 {
    float x;
    float y;
    float z;
    float w;
} Vector4;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle {
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture2D {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture2D;
typedef Texture2D TextureCubemap;
typedef struct RenderTexture2D {
    unsigned int id;        
    Texture2D texture;      
    Texture2D depth;        
    bool depthTexture;      
} RenderTexture2D;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int type;               
} Camera3D;
#define Camera Camera3D     
RLAPI void SetMouseScale(float scaleX, float scaleY);         
RLAPI int GetMouseWheelMove(void);                            
RLAPI int GetTouchX(void);                                    
RLAPI int GetTouchY(void);                                    
RLAPI Vector2 GetTouchPosition(int index);                    
RLAPI void SetGesturesEnabled(unsigned int gestureFlags);     
RLAPI bool IsGestureDetected(int gesture);                    
RLAPI int GetGestureDetected(void);                           
RLAPI int GetTouchPointsCount(void);                          
RLAPI float GetGestureHoldDuration(void);                     
RLAPI Vector2 GetGestureDragVector(void);                     
RLAPI float GetGestureDragAngle(void);                        
RLAPI Vector2 GetGesturePinchVector(void);                    
RLAPI float GetGesturePinchAngle(void);                       
RLAPI void SetCameraMode(Camera camera, int mode);                
RLAPI void UpdateCamera(Camera *camera);                          
RLAPI void SetCameraPanControl(int panKey);                       
RLAPI void SetCameraAltControl(int altKey);                       
RLAPI void SetCameraSmoothZoomControl(int szKey);                 
RLAPI void SetCameraMoveControls(int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey); 
RLAPI void DrawPixel(int posX, int posY, Color color);                                                   
RLAPI void DrawPixelV(Vector2 position, Color color);                                                    
RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                
RLAPI void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                     
RLAPI void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                       
RLAPI void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                   
RLAPI void DrawCircle(int centerX, int centerY, float radius, Color color);                              
RLAPI void DrawCircleSector(Vector2 center, float radius, int startAngle, int endAngle, Color color);    
RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);       
RLAPI void DrawCircleV(Vector2 center, float radius, Color color);                                       
RLAPI void DrawCircleLines(int centerX, int centerY, float radius, Color color);                         
RLAPI void DrawRectangle(int posX, int posY, int width, int height, Color color);                        
RLAPI void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                  
RLAPI void DrawRectangleRec(Rectangle rec, Color color);                                                 
RLAPI void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                 
RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2);
RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2);
RLAPI void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);       
RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                   
RLAPI void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                              
RLAPI void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                
RLAPI void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                           
RLAPI void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);               
RLAPI void DrawPolyEx(Vector2 *points, int numPoints, Color color);                                      
RLAPI void DrawPolyExLines(Vector2 *points, int numPoints, Color color);                                 
RLAPI void SetShapesTexture(Texture2D texture, Rectangle source);                                        
RLAPI bool CheckCollisionRecs(Rectangle rec1, Rectangle rec2);                                           
RLAPI bool CheckCollisionCircles(Vector2 center1, float radius1, Vector2 center2, float radius2);        
RLAPI bool CheckCollisionCircleRec(Vector2 center, float radius, Rectangle rec);                         
RLAPI Rectangle GetCollisionRec(Rectangle rec1, Rectangle rec2);                                         
RLAPI bool CheckCollisionPointRec(Vector2 point, Rectangle rec);                                         
RLAPI bool CheckCollisionPointCircle(Vector2 point, Vector2 center, float radius);                       
RLAPI bool CheckCollisionPointTriangle(Vector2 point, Vector2 p1, Vector2 p2, Vector2 p3);               
RLAPI Image LoadImage(const char *fileName);                                                             
RLAPI Image LoadImageEx(Color *pixels, int width, int height);                                           
RLAPI Image LoadImagePro(void *data, int width, int height, int format);                                 
RLAPI Image LoadImageRaw(const char *fileName, int width, int height, int format, int headerSize);       
RLAPI void ExportImage(Image image, const char *fileName);                                               
RLAPI void ExportImageAsCode(Image image, const char *fileName);                                         
RLAPI Texture2D LoadTexture(const char *fileName);                                                       
RLAPI Texture2D LoadTextureFromImage(Image image);                                                       
RLAPI TextureCubemap LoadTextureCubemap(Image image, int layoutType);                                    
RLAPI RenderTexture2D LoadRenderTexture(int width, int height);                                          
RLAPI void UnloadImage(Image image);                                                                     
RLAPI void UnloadTexture(Texture2D texture);                                                             
RLAPI void UnloadRenderTexture(RenderTexture2D target);                                                  
RLAPI Color *GetImageData(Image image);                                                                  
RLAPI Vector4 *GetImageDataNormalized(Image image);                                                      
RLAPI int GetPixelDataSize(int width, int height, int format);                                           
RLAPI Image GetTextureData(Texture2D texture);                                                           
RLAPI Image GetScreenData(void);                                                                         
RLAPI void UpdateTexture(Texture2D texture, const void *pixels);                                         
RLAPI Image ImageCopy(Image image);                                                                      
RLAPI void ImageToPOT(Image *image, Color fillColor);                                                    
RLAPI void ImageFormat(Image *image, int newFormat);                                                     
RLAPI void ImageAlphaMask(Image *image, Image alphaMask);                                                
RLAPI void ImageAlphaClear(Image *image, Color color, float threshold);                                  
RLAPI void ImageAlphaCrop(Image *image, float threshold);                                                
RLAPI void ImageAlphaPremultiply(Image *image);                                                          
RLAPI void ImageCrop(Image *image, Rectangle crop);                                                      
RLAPI void ImageResize(Image *image, int newWidth, int newHeight);                                       
RLAPI void ImageResizeNN(Image *image, int newWidth,int newHeight);                                      
RLAPI void ImageResizeCanvas(Image *image, int newWidth, int newHeight, int offsetX, int offsetY, Color color);  
RLAPI void ImageMipmaps(Image *image);                                                                   
RLAPI void ImageDither(Image *image, int rBpp, int gBpp, int bBpp, int aBpp);                            
RLAPI Color *ImageExtractPalette(Image image, int maxPaletteSize, int *extractCount);                    
RLAPI Image ImageText(const char *text, int fontSize, Color color);                                      