raylib.odin


    @(link_name="SetMouseScale")
    SetMouseScale :: proc(
        scaleX : _c.float,
        scaleY : _c.float
    ) ---;

    @(link_name="GetMouseWheelMove")
    GetMouseWheelMove :: proc() -> _c.int ---;

    @(link_name="GetTouchX")
    GetTouchX :: proc() -> _c.int ---;

    @(link_name="GetTouchY")
    GetTouchY :: proc() -> _c.int ---;

    @(link_name="GetTouchPosition")
    GetTouchPosition :: proc(index : _c.int) -> Vector2 ---;

    @(link_name="SetGesturesEnabled")
    SetGesturesEnabled :: proc(gestureFlags : _c.uint) ---;

    @(link_name="IsGestureDetected")
    IsGestureDetected :: proc(gesture : _c.int) -> bool ---;

    @(link_name="GetGestureDetected")
    GetGestureDetected :: proc() -> _c.int ---;

    @(link_name="GetTouchPointsCount")
    GetTouchPointsCount :: proc() -> _c.int ---;

    @(link_name="GetGestureHoldDuration")
    GetGestureHoldDuration :: proc() -> _c.float ---;

    @(link_name="GetGestureDragVector")
    GetGestureDragVector :: proc() -> Vector2 ---;

    @(link_name="GetGestureDragAngle")
    GetGestureDragAngle :: proc() -> _c.float ---;

    @(link_name="GetGesturePinchVector")
    GetGesturePinchVector :: proc() -> Vector2 ---;

    @(link_name="GetGesturePinchAngle")
    GetGesturePinchAngle :: proc() -> _c.float ---;

    @(link_name="SetCameraMode")
    SetCameraMode :: proc(
        camera : Camera,
        mode : _c.int
    ) ---;

    @(link_name="UpdateCamera")
    UpdateCamera :: proc(camera : ^Camera) ---;

    @(link_name="SetCameraPanControl")
    SetCameraPanControl :: proc(panKey : _c.int) ---;

    @(link_name="SetCameraAltControl")
    SetCameraAltControl :: proc(altKey : _c.int) ---;

    @(link_name="SetCameraSmoothZoomControl")
    SetCameraSmoothZoomControl :: proc(szKey : _c.int) ---;

    @(link_name="SetCameraMoveControls")
    SetCameraMoveControls :: proc(
        frontKey : _c.int,
        backKey : _c.int,
        rightKey : _c.int,
        leftKey : _c.int,
        upKey : _c.int,
        downKey : _c.int
    ) ---;

    @(link_name="DrawPixel")
    DrawPixel :: proc(
        posX : _c.int,
        posY : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawPixelV")
    DrawPixelV :: proc(
        position : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawLine")
    DrawLine :: proc(
        startPosX : _c.int,
        startPosY : _c.int,
        endPosX : _c.int,
        endPosY : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawLineV")
    DrawLineV :: proc(
        startPos : Vector2,
        endPos : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawLineEx")
    DrawLineEx :: proc(
        startPos : Vector2,
        endPos : Vector2,
        thick : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawLineBezier")
    DrawLineBezier :: proc(
        startPos : Vector2,
        endPos : Vector2,
        thick : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCircle")
    DrawCircle :: proc(
        centerX : _c.int,
        centerY : _c.int,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCircleSector")
    DrawCircleSector :: proc(
        center : Vector2,
        radius : _c.float,
        startAngle : _c.int,
        endAngle : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawCircleGradient")
    DrawCircleGradient :: proc(
        centerX : _c.int,
        centerY : _c.int,
        radius : _c.float,
        color1 : Color,
        color2 : Color
    ) ---;

    @(link_name="DrawCircleV")
    DrawCircleV :: proc(
        center : Vector2,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCircleLines")
    DrawCircleLines :: proc(
        centerX : _c.int,
        centerY : _c.int,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawRectangle")
    DrawRectangle :: proc(
        posX : _c.int,
        posY : _c.int,
        width : _c.int,
        height : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawRectangleV")
    DrawRectangleV :: proc(
        position : Vector2,
        size : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawRectangleRec")
    DrawRectangleRec :: proc(
        rec : Rectangle,
        color : Color
    ) ---;

    @(link_name="DrawRectanglePro")
    DrawRectanglePro :: proc(
        rec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawRectangleGradientV")
    DrawRectangleGradientV :: proc(
        posX : _c.int,
        posY : _c.int,
        width : _c.int,
        height : _c.int,
        color1 : Color,
        color2 : Color
    ) ---;

    @(link_name="DrawRectangleGradientH")
    DrawRectangleGradientH :: proc(
        posX : _c.int,
        posY : _c.int,
        width : _c.int,
        height : _c.int,
        color1 : Color,
        color2 : Color
    ) ---;

    @(link_name="DrawRectangleGradientEx")
    DrawRectangleGradientEx :: proc(
        rec : Rectangle,
        col1 : Color,
        col2 : Color,
        col3 : Color,
        col4 : Color
    ) ---;

    @(link_name="DrawRectangleLines")
    DrawRectangleLines :: proc(
        posX : _c.int,
        posY : _c.int,
        width : _c.int,
        height : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawRectangleLinesEx")
    DrawRectangleLinesEx :: proc(
        rec : Rectangle,
        lineThick : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawTriangle")
    DrawTriangle :: proc(
        v1 : Vector2,
        v2 : Vector2,
        v3 : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawTriangleLines")
    DrawTriangleLines :: proc(
        v1 : Vector2,
        v2 : Vector2,
        v3 : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawPoly")
    DrawPoly :: proc(
        center : Vector2,
        sides : _c.int,
        radius : _c.float,
        rotation : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawPolyEx")
    DrawPolyEx :: proc(
        points : ^Vector2,
        numPoints : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawPolyExLines")
    DrawPolyExLines :: proc(
        points : ^Vector2,
        numPoints : _c.int,
        color : Color
    ) ---;

    @(link_name="SetShapesTexture")
    SetShapesTexture :: proc(
        texture : Texture2D,
        source : Rectangle
    ) ---;

    @(link_name="CheckCollisionRecs")
    CheckCollisionRecs :: proc(
        rec1 : Rectangle,
        rec2 : Rectangle
    ) -> bool ---;

    @(link_name="CheckCollisionCircles")
    CheckCollisionCircles :: proc(
        center1 : Vector2,
        radius1 : _c.float,
        center2 : Vector2,
        radius2 : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionCircleRec")
    CheckCollisionCircleRec :: proc(
        center : Vector2,
        radius : _c.float,
        rec : Rectangle
    ) -> bool ---;

    @(link_name="GetCollisionRec")
    GetCollisionRec :: proc(
        rec1 : Rectangle,
        rec2 : Rectangle
    ) -> Rectangle ---;

    @(link_name="CheckCollisionPointRec")
    CheckCollisionPointRec :: proc(
        point : Vector2,
        rec : Rectangle
    ) -> bool ---;

    @(link_name="CheckCollisionPointCircle")
    CheckCollisionPointCircle :: proc(
        point : Vector2,
        center : Vector2,
        radius : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionPointTriangle")
    CheckCollisionPointTriangle :: proc(
        point : Vector2,
        p1 : Vector2,
        p2 : Vector2,
        p3 : Vector2
    ) -> bool ---;

    @(link_name="LoadImage")
    LoadImage :: proc(fileName : cstring) -> Image ---;

    @(link_name="LoadImageEx")
    LoadImageEx :: proc(
        pixels : ^Color,
        width : _c.int,
        height : _c.int
    ) -> Image ---;

    @(link_name="LoadImagePro")
    LoadImagePro :: proc(
        data : rawptr,
        width : _c.int,
        height : _c.int,
        format : _c.int
    ) -> Image ---;

    @(link_name="LoadImageRaw")
    LoadImageRaw :: proc(
        fileName : cstring,
        width : _c.int,
        height : _c.int,
        format : _c.int,
        headerSize : _c.int
    ) -> Image ---;

    @(link_name="ExportImage")
    ExportImage :: proc(
        image : Image,
        fileName : cstring
    ) ---;

    @(link_name="ExportImageAsCode")
    ExportImageAsCode :: proc(
        image : Image,
        fileName : cstring
    ) ---;

    @(link_name="LoadTexture")
    LoadTexture :: proc(fileName : cstring) -> Texture2D ---;

    @(link_name="LoadTextureFromImage")
    LoadTextureFromImage :: proc(image : Image) -> Texture2D ---;

    @(link_name="LoadTextureCubemap")
    LoadTextureCubemap :: proc(
        image : Image,
        layoutType : _c.int
    ) -> TextureCubemap ---;

    @(link_name="LoadRenderTexture")
    LoadRenderTexture :: proc(
        width : _c.int,
        height : _c.int
    ) -> RenderTexture2D ---;

    @(link_name="UnloadImage")
    UnloadImage :: proc(image : Image) ---;

    @(link_name="UnloadTexture")
    UnloadTexture :: proc(texture : Texture2D) ---;

    @(link_name="UnloadRenderTexture")
    UnloadRenderTexture :: proc(target : RenderTexture2D) ---;

    @(link_name="GetImageData")
    GetImageData :: proc(image : Image) -> ^Color ---;

    @(link_name="GetImageDataNormalized")
    GetImageDataNormalized :: proc(image : Image) -> ^Vector4 ---;

    @(link_name="GetPixelDataSize")
    GetPixelDataSize :: proc(
        width : _c.int,
        height : _c.int,
        format : _c.int
    ) -> _c.int ---;

    @(link_name="GetTextureData")
    GetTextureData :: proc(texture : Texture2D) -> Image ---;

    @(link_name="GetScreenData")
    GetScreenData :: proc() -> Image ---;

    @(link_name="UpdateTexture")
    UpdateTexture :: proc(
        texture : Texture2D,
        pixels : rawptr
    ) ---;

    @(link_name="ImageCopy")
    ImageCopy :: proc(image : Image) -> Image ---;

    @(link_name="ImageToPOT")
    ImageToPOT :: proc(
        image : ^Image,
        fillColor : Color
    ) ---;

    @(link_name="ImageFormat")
    ImageFormat :: proc(
        image : ^Image,
        newFormat : _c.int
    ) ---;

    @(link_name="ImageAlphaMask")
    ImageAlphaMask :: proc(
        image : ^Image,
        alphaMask : Image
    ) ---;

    @(link_name="ImageAlphaClear")
    ImageAlphaClear :: proc(
        image : ^Image,
        color : Color,
        threshold : _c.float
    ) ---;

    @(link_name="ImageAlphaCrop")
    ImageAlphaCrop :: proc(
        image : ^Image,
        threshold : _c.float
    ) ---;

    @(link_name="ImageAlphaPremultiply")
    ImageAlphaPremultiply :: proc(image : ^Image) ---;

    @(link_name="ImageCrop")
    ImageCrop :: proc(
        image : ^Image,
        crop : Rectangle
    ) ---;

    @(link_name="ImageResize")
    ImageResize :: proc(
        image : ^Image,
        newWidth : _c.int,
        newHeight : _c.int
    ) ---;

    @(link_name="ImageResizeNN")
    ImageResizeNN :: proc(
        image : ^Image,
        newWidth : _c.int,
        newHeight : _c.int
    ) ---;

    @(link_name="ImageResizeCanvas")
    ImageResizeCanvas :: proc(
        image : ^Image,
        newWidth : _c.int,
        newHeight : _c.int,
        offsetX : _c.int,
        offsetY : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageMipmaps")
    ImageMipmaps :: proc(image : ^Image) ---;

    @(link_name="ImageDither")
    ImageDither :: proc(
        image : ^Image,
        rBpp : _c.int,
        gBpp : _c.int,
        bBpp : _c.int,
        aBpp : _c.int
    ) ---;

    @(link_name="ImageExtractPalette")
    ImageExtractPalette :: proc(
        image : Image,
        maxPaletteSize : _c.int,
        extractCount : ^_c.int
    ) -> ^Color ---;

    @(link_name="ImageText")
    ImageText :: proc(
        text : cstring,
        fontSize : _c.int,
        color : Color
    ) -> Image ---;
